--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "internal",
+  "name": "admin",
   "version": "1.0.0",
-  "description": "",
+  "description": "An admin POC for Helix",
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack --mode production",
@@ -26,8 +26,6 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.0",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -37,7 +35,8 @@
   },
   "dependencies": {
     "@react/react-spectrum": "^2.15.0",
-    "node-fetch": "^2.3.0",
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5",
     "unescape-js": "^1.1.1"
   }
 }
