--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "dependencies": {
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0"
   }
 }
